# MobileSAM-Shadow

./: main.py  pyproject.toml  requirements.txt
configs/: config.yaml
mobile_sam/: common.py  data.py  engine.py  model.py  prepare_coco.py  prepare_soba.py  prune.py  run_structured.py  run_unstructured.py  test.py  train.py
mobile_sam/data_preparation/: prepare_deroba.py  prepare_soba.py
mobile_sam/utils/: common.py  dataset.py  dataset_utils.py  eval.py  obj_prompt_reflection_dataset.py  obj_prompt_shadow_dataset.py  offline_augmentation.py  shadow_metrics.py
models_shadow_reflection_normal/configs/: config.yaml
scripts/: prepare_coco.sh  prepare_deroba.sh  prepare_soba.sh  run_multiple_seeds_training.py  run_test.sh  run_train.sh
